<resources>
    <string name="app_name">SPi Q&amp;A</string>
    <string name="action_settings">Settings</string>
    <string name="q1">1. Given an array: {2,4,2,8,3,8,2}</string>
    <string name="title_activity_answered">Answers</string>
    <string name="q4"><![CDATA[4. Write a function that prints all prime numbers < 1000]]></string>
    <string name="q3">3. Write a function that will sort an array in descending order.</string>
    <string name="q2">2. Write a function that returns the factorial of a given number.</string>
    <string name="arr">2,4,2,8,3,8,2</string>
    <string name="q5">5. Write a function that will find whether a given (three digit number) is an Armstrong Number</string>
    <string name="q6">6. Write a function that prints in the below format:</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>

</resources>
